# Olio-ohjelmointi

./: .gitignore
H1/: main.cpp
H2A/: CMakeLists.txt  car.cpp  car.hpp  main.cpp  rectangle.cpp  rectangle.hpp  student.cpp  student.hpp
H2B/: CMakeLists.txt  main.cpp
